style.css
/* style for the body section */
body {
  min-height: 100vh;
  min-width: 100vw;
  background-color: #12181f;
  color: white;
}

/* style for the h1 */
h1 {
  text-align: center;
  font-weight: 700;
  font-size: 50px;
  font-family: "Metal Mania", system-ui;
}

/* style for the p element */
p {
  text-align: center;
  font-weight: bold;
  font-size: 30px;
  font-family: "Metal Mania", system-ui;
}

/* style for the actions container */
.actions {
  display: flex;
  justify-content: center;
}
/* style for the actions button */
.actions button {
  padding: 8px 16px;
  font-size: 30px;
  font-family: "Metal Mania", system-ui;
  border-radius: 10px;
  background-color: #27ae60;
  color: white;
}

/* style for the game grid */
.grid-container {
  display: grid;
  justify-content: center;
  grid-gap: 16px;
  grid-template-columns: repeat(6, 140px);
  grid-template-rows: repeat(2, calc(140px / 2 * 3));
}

/* style for the card */
.card {
  height: calc(140px / 2 * 3);
  width: 140px;
  border-radius: 10px;
  background-color: white;
  position: relative;
  transform-style: preserve-3d;
  transition: all 0.5s ease-in-out;
}

/* style for the front image */
.front-image {
  transform: rotateY(180deg);
  width: 60px;
  height: 60px;
}

/* style for the flipped */
.card.flipped {
  transform: rotateY(180deg);
}

/* style for the visibility of the card */
.front,
.back {
  backface-visibility: hidden;
  position: absolute;
  border-radius: 10px;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
}

/* style for the card front*/
.card .front {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* style for the card back*/
.card .back {
  background-image: url(pattern.svg);
  background-position: center center;
  background-size: cover;
}

